[gd_scene load_steps=5 format=3 uid="uid://do2nerwcgp3if"]

[ext_resource type="Script" uid="uid://3gf5tjw4723v" path="res://boneco.gd" id="1_l3wr3"]
[ext_resource type="Texture2D" uid="uid://bvr60r00frb7e" path="res://nhac zip/Pote Pe√ßa Azul Grande.png" id="2_l3wr3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdf1o"]
size = Vector2(126, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gnnr"]
size = Vector2(128, 126)

[node name="PoteAzulGrande" type="Node2D"]
script = ExtResource("1_l3wr3")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(-0.500002, -1)
scale = Vector2(2.40385, 2.25)
texture = ExtResource("2_l3wr3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_mdf1o")

[node name="Area2D" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Area2D"]
shape = SubResource("RectangleShape2D_8gnnr")

[connection signal="area_entered" from="CharacterBody2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CharacterBody2D/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="CharacterBody2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="CharacterBody2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="CharacterBody2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
